--- a/notebooks/debug.ipynb
+++ b/notebooks/debug.ipynb
@@ -79,6 +79,76 @@
     "        process_csv(csv,didx,words_dir)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#---------------------------\n",
+    "# imports\n",
+    "#---------------------------\n",
+    "import re\n",
+    "import os\n",
+    "from glob import glob\n",
+    "import pandas as pd\n",
+    "from tqdm.auto import tqdm\n",
+    "tqdm.pandas()\n",
+    "#---------------------------\n",
+    "# csv\n",
+    "#---------------------------\n",
+    "def reset(df):\n",
+    "    df.dropna(inplace=True)\n",
+    "    df.reset_index(drop=True,inplace=True) \n",
+    "    return df\n",
+    "\n",
+    "def de_emojify(text):\n",
+    "    regrex_pattern = re.compile(pattern = \"[\"u\"\\U0001F600-\\U0001F64F\"  # emoticons\n",
+    "                                             u\"\\U0001F300-\\U0001F5FF\"  # symbols & pictographs\n",
+    "                                             u\"\\U0001F680-\\U0001F6FF\"  # transport & map symbols\n",
+    "                                             u\"\\U0001F1E0-\\U0001F1FF\"  # flags (iOS)\n",
+    "                                            \"]+\", flags = re.UNICODE)\n",
+    "    return regrex_pattern.sub(r'',text)\n",
+    "\n",
+    "def clean(text):\n",
+    "    text=str(text)\n",
+    "    text = re.sub(\"[a-zA-Z0-9]+\", \"\",text)\n",
+    "    if len(text)==0:\n",
+    "        return None\n",
+    "    else:\n",
+    "        text=de_emojify(text)\n",
+    "        if len(text)>0:\n",
+    "            return text\n",
+    "        else:\n",
+    "            return None\n",
+    "\n",
+    "lang=\"bn\"\n",
+    "data_dir=f\"/backup/Oscar/words/{lang}/\"\n",
+    "csvs=[csv for csv in glob(os.path.join(data_dir,\"*.csv\"))]\n",
+    "dfs=[pd.read_csv(csv) for csv in tqdm(csvs)]\n",
+    "df=pd.concat(dfs,ignore_index=True)\n",
+    "df=reset(df)\n",
+    "df[\"word\"]=df[\"word\"].progress_apply(lambda x:clean(x))\n",
+    "df=reset(df)\n",
+    "# group\n",
+    "df_new = df.groupby(df['word']).aggregate({\"count\":\"sum\"})\n",
+    "df_new = df_new.sort_values(by='count', ascending=False)\n",
+    "# new\n",
+    "df=pd.DataFrame({})\n",
+    "df[\"word\"]=df_new.index.tolist()\n",
+    "df[\"count\"]=df_new[\"count\"].tolist()\n",
+    "df[\"count\"]=df[\"count\"].progress_apply(lambda x:int(x))\n",
+    "df.to_csv(os.path.join(\"/backup/Oscar/words/\",f\"{lang}.csv\"))\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
